--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@heroicons/react": "^2.1.3",
+    "@splinetool/react-spline": "^2.2.6",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-icons": "^5.1.0",
+    "react-tilt": "^1.0.2",
+    "react-toastify": "^10.0.5",
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "framer-motion": "^11.1.0",
+    "maath": "^0.10.7",
+    "postcss": "^8",
+    "react-intersection-observer": "^9.8.2",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.163.0",
+    "typescript": "^5"
   }
 }
